# lowem1-experiments

./: OCRTransferLearning.ipynb  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
notebooks/logs/test_run_1/: events.out.tfevents.1687396052.255cfe01a37a.7152.0
notebooks/test/runs/Jun22_01-07-31_255cfe01a37a/: events.out.tfevents.1687396059.255cfe01a37a.7152.1
projects/consT5/: experiments.yml  tfboard.ipynb  train.ipynb
projects/feature_extraction/: experiments.yml  train.ipynb
